[gd_scene load_steps=8 format=3 uid="uid://vtyl83cyps1a"]

[ext_resource type="Script" path="res://Scenes and scripts/World.gd" id="1_qphkt"]
[ext_resource type="PackedScene" uid="uid://fakkjmwhfxu" path="res://Scenes and scripts/Valueable.tscn" id="2_l4ik3"]
[ext_resource type="PackedScene" uid="uid://d1hfb6n0tfwqi" path="res://Scenes and scripts/Boat.tscn" id="3_b8djq"]
[ext_resource type="PackedScene" uid="uid://c63o8t5jmtptd" path="res://Scenes and scripts/RareTreasure.tscn" id="3_qn6d6"]
[ext_resource type="PackedScene" uid="uid://dolrxjom08wkw" path="res://Scenes and scripts/Player.tscn" id="4_u4dxa"]
[ext_resource type="TileSet" uid="uid://dd1wqejmttrtg" path="res://new_tile_set.tres" id="5_cdo8i"]
[ext_resource type="PackedScene" uid="uid://yhjuxau1ofv1" path="res://Scenes and scripts/UserInterface.tscn" id="6_jjyrh"]

[node name="World" type="Node2D"]
script = ExtResource("1_qphkt")
valueable_scene = ExtResource("2_l4ik3")
rare_treasure_scene = ExtResource("3_qn6d6")

[node name="Boat" parent="." instance=ExtResource("3_b8djq")]
position = Vector2(1188, 92)

[node name="Player" parent="." instance=ExtResource("4_u4dxa")]
position = Vector2(960, 640)
initial_max_gas = 20

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_cdo8i")
format = 2
layer_0/tile_data = PackedInt32Array(1, 327680, 2, 2, 196608, 0, 65538, 0, 0, 65537, 0, 2, 65536, 0, 0, 0, 327680, 2, 131074, 0, 2, 131073, 0, 2, 131072, 0, 0, 196608, 0, 1, 196609, 0, 0, 196610, 0, 0, 262146, 0, 1, 262145, 0, 1, 262144, 0, 0, 327679, 0, 0, 327678, 0, 0, 327677, 0, 1, 262141, 0, 0, 262140, 0, 1, 196604, 0, 0, 131068, 0, 2, 65532, 65536, 0, 65533, 393216, 2, 65534, 131072, 0, 65535, 131072, 0, 131071, 0, 0, 131070, 0, 2, 131069, 0, 2, 196605, 0, 0, 196606, 0, 2, 262142, 0, 0, 262143, 0, 1, 327676, 0, 1, 196607, 0, 2, 327682, 393216, 1, 327683, 131072, 0, 327684, 393216, 2, 327685, 131072, 0, 327686, 327680, 2, 393222, 0, 2, 393223, 0, 1, 393224, 0, 2, 393225, 0, 2, 458761, 0, 1, 458762, 0, 1, 458763, 0, 0, 458764, 0, 2, 524300, 0, 0, 524299, 0, 1, 524298, 0, 0, 524297, 0, 0, 589833, 0, 1, 589832, 0, 0, 655367, 0, 2, 655366, 0, 2, 655364, 0, 2, 655365, 0, 2, 720900, 0, 2, 720899, 0, 1, 720898, 0, 2, 655362, 0, 1, 655361, 0, 1, 589826, 0, 1, 589827, 0, 2, 589828, 0, 2, 589829, 0, 0, 524293, 0, 1, 524294, 0, 2, 524292, 0, 1, 458756, 0, 0, 458755, 0, 1, 393219, 0, 2, 393218, 0, 1, 393217, 0, 2, 327681, 0, 1, 393220, 0, 2, 393221, 0, 0, 458757, 0, 1, 458758, 0, 0, 458759, 0, 0, 458760, 0, 2, 589836, 0, 2, 589835, 0, 0, 589834, 0, 0, 524296, 0, 0, 524295, 0, 1, 327680, 0, 0, 458753, 0, 0, 524290, 0, 1, 524291, 0, 0, 655370, 0, 0, 655371, 0, 0, 655369, 0, 0, 655368, 0, 1, 655363, 0, 0, 589825, 0, 1, 524289, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 2, 589824, 0, 2, 655360, 0, 2, 786436, 0, 1, 786437, 0, 1, 786444, 0, 1, 720908, 0, 1, 655372, 0, 1, 393228, 0, 0, 327692, 196608, 0, 786443, 0, 2, 720907, 0, 1, 393227, 0, 0, 327691, 131072, 0, 786442, 0, 1, 720906, 0, 0, 393226, 0, 2, 327690, 327680, 2, 786441, 0, 0, 720905, 0, 0, 327689, 131072, 0, 786440, 0, 0, 720904, 0, 0, 327688, 131072, 0, 786439, 0, 0, 720903, 0, 0, 589831, 0, 0, 327687, 131072, 0, 786438, 0, 0, 720902, 0, 0, 589830, 0, 2, 720901, 0, 1, 786435, 0, 1, 786434, 0, 0, 458754, 0, 0, 786433, 0, 1, 720897, 0, 0, 786432, 0, 2, 720896, 0, 0, 12, 0, 2, -65524, 196608, 0, 11, 0, 1, -65525, 393216, 2, 10, 0, 2, -65526, 65536, 0, 65548, 0, 0, 65547, 0, 2, 65546, 0, 0)

[node name="ValueableLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="ValueableLocations"]
position = Vector2(1346, 438)

[node name="Marker2D2" type="Marker2D" parent="ValueableLocations"]
position = Vector2(1431, 817)

[node name="Marker2D3" type="Marker2D" parent="ValueableLocations"]
position = Vector2(562, 1176)

[node name="Marker2D4" type="Marker2D" parent="ValueableLocations"]
position = Vector2(178, 1009)

[node name="Marker2D5" type="Marker2D" parent="ValueableLocations"]
position = Vector2(1829, 1185)

[node name="RareTreasureLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="RareTreasureLocations"]
position = Vector2(1693, 681)

[node name="Marker2D3" type="Marker2D" parent="RareTreasureLocations"]
position = Vector2(681, 997)

[node name="Marker2D2" type="Marker2D" parent="RareTreasureLocations"]
position = Vector2(1281, 1177)

[node name="UserInterface" parent="." instance=ExtResource("6_jjyrh")]
offset_right = 1920.0
offset_bottom = 1280.0

[connection signal="body_entered" from="Boat" to="Player" method="_on_boat_body_entered"]
[connection signal="dead" from="Player" to="UserInterface" method="_on_player_dead"]
[connection signal="gas_consumed" from="Player" to="UserInterface" method="_on_player_gas_consumed"]
[connection signal="touched_boat" from="Player" to="UserInterface" method="_on_player_touched_boat"]
[connection signal="game_started" from="UserInterface" to="." method="_on_user_interface_game_started"]
[connection signal="game_started" from="UserInterface" to="Player" method="_on_user_interface_game_started"]
[connection signal="next_day_button_pressed" from="UserInterface" to="Player" method="_on_user_interface_next_day_button_pressed"]
